QuoteMaker/quote/static/css/main.css
.center {
	text-align: center;
}
.title {
	font-size: 4rem;
}
.subtitle {
    font-style: italic;
    font-size: 2rem;
}
.name {
    font-style: bold;
    font-size: 24pt;
}
#quote {
    font-family: 'Quattrocento', inherit;
    font-size: 4rem;
}
.btn-xl {
	height: 75px;
	font-size: 2.5em;
	border-radius: 15px;
}
.gray {
	color: #AAAAAA;
}
.gray a {
	color: #80A3C2;
}

.form-wrap {
    margin-top: 0px;
    margin-bottom: 80px;
}

.form-control, .checkbox {
    position: relative;
    height: auto;
    padding: 10px 20px;
    font-size: 1.5rem;
@include box-sizing(border-box);
    margin-bottom: 10px;
}

#search-btn {
    border-width: 2px;
}

.confirm-password {
    margin-top: 0;
}

.field-pair-top {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
    margin-bottom: -1px;
}

.field-pair-bottom {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    margin-top: -2px;
}

a {
    text-decoration: none;
}

td {
    text-decoration: none;
}

table a:not(.btn), .table a:not(.btn) {
    text-decoration: none;
}

form {
    min-width: 320px;
    max-width: 900px;
    padding: 15px;
    margin: 0 auto;
}

.container {
    max-width: 900px;
}

td.nowrap {
    white-space: nowrap;
}

select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
}

.remove {
    position: relative;
    float: right;
    top: 0px;
    right: -10px;
    font-size: 16;
}

.unstyled-button {
    background: transparent;
    border: none;
    outline: 0;
}

.remove-button {
    background: transparent;
    border: none;
    outline: 0;
    color: rgba(0, 0, 0, 0.6)
}

.remove-button:hover {
    color: #000;
   transition: color .1s ease-in;
   -webkit-transition: color .1s ease-in;
}

